@@ -10,6 +10,7 @@
     <a href="/email/index">E-Mail</a><br />
     <a href="/index/table">Table</a><br />
     <a href="/index/table2">Table2</a><br />
+    <a href="/index/table3">Table3</a><br />
     <a href="/index/dialogbox" class="ajaxlink">Dialogbox</a><br />
     <a href="/index/alert" class="ajaxlink">Alert</a><br />
     <a href="/index/alert2" class="ajaxlink">Alert error</a><br />
