@@ -1,0 +1,5 @@
+{% extends "layout.twig" %}
+
+{% block content %}
+    {{ action('/index/table3Render')|raw }}
+{% endblock %}
